<resources>
    <string name="app_name">MycoScan</string>
    <string name="menu_hint">Menu</string>
    <string name="skaner_hint">Skaner</string>
    <string name="ulubione_hint">Ulubione</string>
    <string name="pomoc_hint">Pomoc</string>
    <string name="atlas_hint">Atlas Grzybów</string>
    <string name="tutorial_header1">Zbyt mały, zbyt daleko</string>
    <string name="tutorial_header2">Odpowiednia odległość</string>
    <string name="tutorial_header3">Tylko kapelusz od góry</string>
    <string name="tutorial_header4">Zdjęcie całego grzyba</string>
    <string name="tutorial_header5">Bez naturalnego tła</string>
    <string name="tutorial_header6">Naturalne tło</string>
    <string name="tutorial_header7">Więcej wskazówek!</string>
    <string name="tutorial_description1">Jeśli grzyby są skanowane ze zbyt dużej odległości, rozpoznawanie obrazu nie uzyska wystarczającej ilości szczegółów i wynik nie będzie miarodajny.</string>
    <string name="tutorial_description2">Jeśli grzyby wypełniają formatkę, detekcja\n działa optymalnie. Oczywiście nie odległość powinna być też zbyt mała, tak aby cały grzyb znalazł się na zdjęciu</string>
    <string name="tutorial_description3">Jeśli kapelusz grzyba jest sfotografowany\n tylko od góry, w rozpoznawaniu obrazu\n zabraknie informacji o kształcie trzonu i blaszek</string>
    <string name="tutorial_description4">Kaptur, łodyga z bulwą, a zwłaszcza blaszki,\n rurki lub ściernisko powinny zawsze być\n na zdjęciu, aby wykrywanie dało dobre wyniki.</string>
    <string name="tutorial_description5">Jeśli brakuje naturalnego tła, ważne szczegóły mogą nie zostać wykorzystane do rozpoznania.</string>
    <string name="tutorial_description6">Środowisko naturalne zawiera ważne informacje, które mają pozytywny wpływ na dokładność rozpoznania grzyba</string>
    <string name="tutorial_description7">1. Nigdy nie spożywaj grzybów wyłącznie na podstawie wykrycia przez aplikację\n\n
        2. Zawsze zakładaj, że wyniki wykrywania grzybów mogą być błędne\n\n
        3. Jeśli potrzebujesz pomocy w identyfikacji grzybów, zapytaj eksperta np. istnieją grupy na Facebooku, które są bardzo dobrze zorientowane w temacie grzybów\n\n
        4. Upewnij się że jakość zdjęcia jest dobra: dla wiarygodnej identyfikacji, zdjęcie powinno być ostre, nie za ciemne lub za jasne\n\n
    </string>
    <string name="faq">Funkcje aplikacji\n\n
Ikona Aparatu\n
Umożliwia wykonanie zdjęcia grzyba, który chcesz zidentyfikować. Po zrobieniu zdjęcia aplikacja automatycznie rozpocznie proces analizy obrazu, aby określić gatunek grzyba.\n
Ikona Galerii\n
Pozwala na sprawdzenie grzybów, których zdjęcia wykonałeś wcześniej.\n
Najczęściej zadawane pytania (FAQ)\n
1. Jak działa aplikacja do rozpoznawania grzybów?\n\n
- Aplikacja wykorzystuje zaawansowaną technologię rozpoznawania obrazów (AI), która analizuje zdjęcia grzybów i porównuje je z bazą danych. Po wykonaniu lub wgraniu zdjęcia aplikacja poda informacje o gatunku grzyba.\n
2. Czy aplikacja zawsze rozpoznaje grzyby poprawnie?\n\n
- Chociaż aplikacja stara się zapewnić jak najwyższą dokładność, wyniki mogą być czasami niepewne. Zawsze warto sięgać po dodatkowe źródła informacji i unikać spożywania grzybów, co do których jadalności nie masz 100% pewności.\n
3. Czy aplikacja rozpoznaje wszystkie gatunki grzybów?\n\n
- Aplikacja posiada bazę danych popularnych gatunków grzybów, zarówno jadalnych, jak i trujących. Jednakże, może nie zawierać rzadkich lub lokalnych gatunków, szczególnie tych z odległych regionów.\n
4. Jak zrobić dobre zdjęcie do rozpoznania grzyba?\n\n
- Aby uzyskać najlepsze rezultaty:\n
- Upewnij się, że zdjęcie jest dobrze oświetlone.\n
- Uchwyć różne perspektywy, pokazując szczegóły takie jak kapelusz, trzon i blaszki/pory.\n
- Postaraj się zbliżyć na cechy szczególne, np. kolor i fakturę.\n
5. Czy aplikacja rozpoznaje grzyby na podstawie opisu tekstowego?\n\n
- Obecnie aplikacja analizuje jedynie zdjęcia grzybów. W przyszłości planujemy wprowadzenie funkcji wyszukiwania na podstawie opisu.\n
6. Co zrobić, jeśli aplikacja nie rozpoznała grzyba lub podała błędne informacje?\n\n
- Spróbuj zrobić nowe zdjęcie z lepszym oświetleniem lub pod innym kątem.\n
- Jeśli wynik nadal jest błędny, skonsultuj się z ekspertami lub sprawdź specjalistyczne źródła wiedzy o grzybach.\n
7. Czy aplikacja identyfikuje grzyby trujące?\n\n
- Tak, aplikacja rozpoznaje trujące grzyby i ostrzega przed ich spożyciem. Pamiętaj jednak, aby zachować szczególną ostrożność i nigdy nie spożywać grzybów bez pewności co do ich bezpieczeństwa.\n
8. Czy mogę używać aplikacji offline?\n\n
- Obecnie aplikacja wymaga połączenia z internetem, aby korzystać z bazy danych i technologii rozpoznawania obrazów. W przyszłości planujemy wprowadzenie trybu offline z ograniczoną funkcjonalnością.\n
9. Czy aplikacja zapisuje historię moich skanów?\n\n
- Tak, aplikacja pozwala na przechowywanie historii skanów, co umożliwia łatwy dostęp do wcześniejszych rozpoznań. Możesz także usunąć historię w ustawieniach.\n
10. Czy mogę zgłosić błąd w rozpoznaniu grzyba?\n\n
- Tak, za pomocą funkcji zgłaszania problemów możesz poinformować nas o błędnym rozpoznaniu. Twoje zgłoszenia pomagają nam ulepszać algorytmy i bazę danych.\n
11. Czy aplikacja rozpoznaje inne rośliny?\n\n
- Na chwilę obecną aplikacja skupia się wyłącznie na grzybach. W przyszłości planujemy rozszerzyć jej funkcje o możliwość rozpoznawania innych roślin.\n
12. Jakie są wymagania sprzętowe aplikacji?\n\n
- Aplikacja działa na smartfonach z:\n
- Aparatem o minimalnej rozdzielczości (X MP),\n
- Systemem Android/iOS w wersji (X.X) lub nowszej.\n
13. Czy aplikacja przechowuje moje dane osobowe?\n\n
- Aplikacja nie zbiera ani nie przechowuje Twoich danych osobowych bez Twojej zgody. Zdjęcia są wykorzystywane jedynie do analizy rozpoznania grzybów zgodnie z polityką prywatności.\n
\n\n\n\n\n\n</string>
    <!-- Stringi do Przycisków w tutorialu -->
    
    <string name="pomiń">Pomiń</string>
    <string name="dalej">Dalej</string>
    <string name="cofnij">Cofnij</string>
    <string name="start">Start</string>

    <!-- String napisy długie -->

    <!-- Tutorial ekran 1 -->
    <string name="witaj">Witaj!</string>
    <string name="wskazówki_1">Podane wskazówki pomogą ci korzystać z MycoScan w najlepszy sposób.</string>
    <string name="dobrej_zabawy">Dobrej zabawy przy polowaniu na gryby!</string>

    <!-- Tutorial ekran 2 -->
    <string name="tutorial_1_1">Zbyt mały, zbyt daleko</string>
    <string name="tutorial_1_2">Jeśli grzyby są skanowane ze zbyt dużej odległości, rozpoznawanie obrazu nie uzyska wystarczającej ilości szczegółów i wynik nie będzie miarodajny.</string>
    <string name="tutorial_1_3">Odpowiednia odległość</string>
    <string name="tutorial_1_4">Jeśli grzyby wypełniają formatkę, detekcja działa optymalnie. Oczywiście nie odległość powinna być też zbyt mała, tak aby cały grzyb znalazł się na zdjęciu</string>

    <!-- Tutorial ekran 3 -->
    <string name="tutorial_2_1">Tylko kapelusz od góry</string>
    <string name="tutorial_2_2">Jeśli kapelusz grzyba jest sfotografowany tylko od góry, w rozpoznawaniu obrazu zabraknie informacji o kształcie trzonu i blaszek</string>
    <string name="tutorial_2_3">Zdjęcie całego grzyba</string>
    <string name="tutorial_2_4">Kaptur, łodyga z bulwą, a zwłaszcza blaszki, rurki lub ściernisko powinny zawsze być na zdjęciu, aby wykrywanie dało dobre wyniki.</string>

    <!-- Tutorial ekran 4 -->
    <string name="tutorial_3_1">Bez naturalnego tła</string>
    <string name="tutorial_3_2">Jeśli brakuje naturalnego tła, ważne szczegóły mogą nie zostać wykorzystane do rozpoznania.</string>
    <string name="tutorial_3_3">Naturalne tło</string>
    <string name="tutorial_3_4">Środowisko naturalne zawiera ważne informacje, które mają pozytywny wpływ na dokładność rozpoznania grzyba</string>

    <!-- Tutorial regulamin -->
    <string name="koniec_wskazówki">Więcej wskazówek!</string>
    <string name="regulamin">
        • Nigdy nie spożywaj grzybów wyłącznie na podstawie wykrycia przez aplikację\n \n
    •Zawsze zakładaj, że wyniki wykrywania grzybów mogą być błędne\n \n
    •jeśli potrzebujesz pomocy w identyfikacji grzybów, zapytaj eksperta np. istnieją grupy na Facebooku, które są bardzo dobrze zorientowane w temacie grzybów\n \n
    •Upewnij się że jakość zdjęcia jest dobra: dla wiarygodnej identyfikacji, zdjęcie powinno być ostre, nie za ciemne lub za jasne\n \n
    </string>

    <!-- alty dla obrazów -->
    <string name="alt_logo">logo</string>
    <string name="alt_place_holder">place holder</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="mushroom"></string>
</resources>