<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <ImageView
        android:id="@+id/mushroom_image"
        android:contentDescription="@string/alt_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textSize="48sp"
        style="@style/app_name"
        app:layout_constraintTop_toBottomOf="@id/mushroom_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/witaj"
        android:layout_marginTop="8dp"
        android:textSize="48sp"
        style="@style/style_text"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/subtitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wskazówki_1"
        android:textSize="16sp"
        style="@style/style_text"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/fun_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dobrej_zabawy"
        android:textSize="16sp"
        style="@style/style_text"
        app:layout_constraintTop_toBottomOf="@id/subtitle_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/skip_button_1"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/pomiń"
            style="@style/button" />

        <Button
            android:id="@+id/next_button_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/dalej"
            style="@style/button" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
