<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray">

    <TextView
        android:id="@+id/du1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="sans-serif-black"
        android:ellipsize="end"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:text="@string/tutorial_header5"
        android:textColor="@color/brown"
        android:textSize="40sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pic1"/>

    <TextView
        android:id="@+id/du2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="sans-serif-black"
        android:text="@string/tutorial_description5"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/du1"/>

    <ImageView
        android:id="@+id/pic1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/add_photo_24"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/du3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="sans-serif-black"
        android:ellipsize="end"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:text="@string/tutorial_header6"
        android:textColor="@color/brown"
        android:textSize="40sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pic2"/>

    <TextView
        android:id="@+id/du4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="sans-serif-black"
        android:text="@string/tutorial_description6"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/du3"/>

    <ImageView
        android:id="@+id/pic2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/add_photo_24"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/du2"/>

</androidx.constraintlayout.widget.ConstraintLayout>